--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-wireplumber (0.3.95-1) UNRELEASED; urgency=medium
+wireplumber (0.3.95-0apertis0) apertis; urgency=medium
 
-  * Initial release (Closes: #988143)
+  * Initial release (Debian ITP: #988143)
 
  -- Frederic Danis <frederic.danis@collabora.com>  Wed, 05 May 2021 15:25:29 +0000
