--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+wireplumber (0.3.95-0+apertis2) apertis; urgency=medium
+
+  * d/patches: Backport systemd conflicts patch
+  * Add apparmor rule
+
+ -- Frédéric Danis <frederic.danis@collabora.com>  Fri, 21 May 2021 17:54:50 +0200
+
 wireplumber (0.3.95-0apertis1) apertis; urgency=medium
 
   [ Andrej Shadura ]
