--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+wireplumber (0.3.96-1+apertis1atari1) atari; urgency=medium
+
+  * Remaining atari specific changes:
+    * Don't build documentation or introspection data
+
+ -- Christopher Obbard <chris.obbard@collabora.com>  Thu, 27 May 2021 16:35:45 +0100
+
 wireplumber (0.3.96-1+apertis1) apertis; urgency=medium
 
   * Sync updates from Debian Experimental
